# Vehicle-Inventory-Management

./: .gitignore  README.md  docker-compose.yml  render.yaml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20251024_0001_initial.py  20251025_0002_add_payment_status.py  20251025_sales_schema.py  20251026_excel_sync.py  ecaf6f96600f_add_performance_indexes.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  anomaly.py  audit_event.py  branch.py  common.py  customer.py  import_log.py  inventory.py  payment.py  role.py  sale.py  sales_record.py  transfer.py  user.py  vehicle_model.py  vehicle_stock.py
backend/app/schemas/: anomaly.py  audit.py  auth.py  base.py  branch.py  customer.py  import_job.py  inventory.py  payment.py  sale.py  sales_record.py  transfer.py  vehicle_model.py  vehicle_stock.py
backend/app/services/: anomalies.py  excel_sync.py  imports.py  inventory.py  payments.py  reports.py  sales.py  transfers.py  users.py
backend/app/tasks/: __init__.py  imports.py
backend/app/utils/: logging.py
backend/scripts/: seed_branches.py  seed_demo_data.py  seed_honda_sales.py
backend/storage/imports/: Book1_3.xlsx  Book1_5.xlsx  Book1_6.xlsx  Book_1.xlsx  honda_showrooms_kerala_data_v2.xlsx  honda_showrooms_kerala_dataset_4.xlsx  import_template.xlsx  import_template_1.csv  import_template_2.xlsx  import_template_5.xlsx  main_test1.xlsx  (+4 more)
(+60 files in other folders)
